[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytheus"
version = "0.1.0"
authors = [{name="Max Greco", email="mmngreco@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["rich", "typer", "pandas", "requests"]
description = "pytheus is a hacky CLI tool for get data from prometheus."

[project.scripts]
pytheus = "pytheus:app"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "pre-commit",
]

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
